--- a/blog_project/templates/top_news.html
+++ b/blog_project/templates/top_news.html
@@ -6,7 +6,13 @@
             <ul>
               <h3><a href="/">{{ article.title }}</a></h3>
               <p>{{ article.content }}</p>
-              <p class="autor"><span class="lm f_l"><a href="/">个人博客</a></span><span class="dtime f_l">{{ article.date_publish }}</span><span class="viewnum f_r">浏览（<a href="/">{{ article.click_count }}</a>）</span><span class="pingl f_r">评论（<a href="/">{{ article.comment_set.count}}</a>）</span></p>
+              <p class="autor">
+                  <span class="lm f_l">
+                      {% for tag in article.tag.all %}
+                          <a href="/">{{ tag.name }}</a>
+                      {% endfor %}
+                  </span>
+                  <span class="dtime f_l">{{ article.date_publish }}</span><span class="viewnum f_r">浏览（<a href="/">{{ article.click_count }}</a>）</span><span class="pingl f_r">评论（<a href="/">{{ article.comment_set.count}}</a>）</span></p>
             </ul>
           </div>
       {% endfor %}
